Bug 388658 - Usability: While debugging the variable view loses the user defined column width settings when context changes or when we click on any varible in the variables window
Summary: Usability: While debugging the variable view loses the user defined column wi...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: CPP Debugger (other bugs)
Version First Reported In: 4.7.4
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-07 19:48 UTC by Claudio Henrique Fortes Felix
Modified: 2022-12-23 14:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11.230400
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudio Henrique Fortes Felix 2018-01-07 19:48:44 UTC
I'm heavily using kdevelop for developing and debugging in C and I like it a lot... thanks for the great job you developers have done! There's an annoyance though that I think could be easily fixable:

When I'm debugging code and local context changes from a function to another, the columns in the variable view are reset to their default positions (columns "Name", "Value" and "Type" are brought close together to the left). This is a bit annoying, since I have to regrow the "Value" column all the time to view a long line I have to watch while context changes.

This "column width reset" also happens every time we click on any watched variable in this window.
Comment 1 Justin Zobel 2022-11-10 22:33:13 UTC
Thank you for reporting this issue in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 2 Bug Janitor Service 2022-11-25 05:21:05 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2022-12-10 05:17:49 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 4 Emilio Bova 2022-12-23 09:40:45 UTC
The automatic resize behavior has been made configurable with commit https://commits.kde.org/kdevelop/7ff8372fa576e3cc9ecabc84c789720c2662a90d .
Does that fix your issue?
Comment 5 Igor Kushnir 2022-12-23 14:38:13 UTC
> When I'm debugging code and local context changes from a function to another, the columns in the variable view are reset to their default positions (columns "Name", "Value" and "Type" are brought close together to the left).
Neither I nor Emilio Bova could reproduce this part of the bug report in KDevelop master, even in a several-months-old version. Either it has been fixed at some point or we need more information to reproduce.

> This "column width reset" also happens every time we click on any watched variable in this window.
The commit Emilio Bova referenced fixes this second part of the bug report.