Don't auto-resize the columns of the Variables widget

The automatic resize on click or node expand in the Variables
widget is a one-way ticket to headcache, especially when dealing
with long strings or long type names.

BUG: 388658
FIXED-IN: 5.11.230400